# cai

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  cai  mcp-config.example.json  prompt_history.txt  run.bat  run.sh
docs/: agentic.md  agentic_implementation_plan.md  api_specifications.md  autocomplete_plan.md  cai.md  concrete_examples_workflows.md  configuration.md  example.md  extended.md  history_todo.md  idea.md  implementation_checklist.md  mcp_integration_status.md  new_file.md  prd.md  review.md  sdd_meta_cognitive_reasoning_engine.md  session_feature.md  todo.md  workflow_feature.md
docs/new_directory/: README.md
docs/tasks/: llm_chat_app_design.md  todo_10_5_25.md  todo_11_5_25.md  todo_12_5.md
prompts/: ai_generated.yaml  bug_fixing.yaml  code_analysis.yaml  deadlock_analysis.md  refactoring.yaml  task_creation.yaml
src/: autocomplete.rs  chat.rs  chat_interface.rs  chat_ui.rs  command_handler.rs  commands_registry.rs  commands_selector.rs  configuration.rs  feedback_loop.rs  files.rs  files_selector.rs  history.rs  input_handler.rs  lib.rs  logger.rs  main.rs  mcp_client.rs  mcp_config.rs  mcp_manager.rs  message_popup.rs  openrouter.rs  openrouter_client.rs  popup_manager.rs  popup_util.rs  project_scanner.rs  prompt_loader.rs  session.rs  session_manager.rs  session_test.rs  syntax_highlighting.rs  task_executor.rs  terminal.rs  tree.rs  validator.rs  workflow.rs  workflow_orchestrator.rs  workflow_test.rs  yes_no.rs  yes_no_popup.rs
src/app/: config.rs  events.rs  mod.rs  state.rs
src/chat/: input_handler.rs
src/commands/: bash_cmd.rs  config_cmd.rs  files_cmd.rs  help.rs  mcp_cmd.rs  mod.rs  session_cmd.rs  set_model.rs  workflow_cmd.rs
src/core/: chat.rs  command_processor.rs  memory.rs  mod.rs
src/services/: file_service.rs  llm_client.rs  mod.rs  ollama_client.rs  project_service.rs
src/tests/: mod.rs  read_files_test.rs  test_interpreter.rs
src/ui/: app.rs  layout.rs  mod.rs
src/ui/popups/: command_selector.rs  file_selector.rs  mod.rs  popup_manager.rs  yes_no.rs
src/ui/widgets/: chat_input.rs  chat_output.rs  mod.rs  project_tree.rs
src/utils/: terminal.rs
tests/: README.md  test_chat_workflow.rs  test_edge_cases.rs  test_integration.rs  test_prompt_management.rs  test_prompt_scoring.rs  test_runner.md  test_similarity_detection.rs
