cargo-features = ["edition2024"]

[package]
name = "cai"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1.45.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1"
directories = "6"
toml = "0.8"
toml_edit = "0.22"
signal-hook = "0.3"
chrono = "0.4.23"
syntect = "5.2.0"
glob = "0.3"
lazy_static = "1.4.0"
regex = "1.11.1"
rustyline = "15.0.0"
termion = "2.0.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
tui-textarea = { version = "0.7.0", features = ["search"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
textwrap = "0.16.2"
chumsky = "0.10.1"
tui-tree-widget = "0.23.0"

[dev-dependencies]

[dependencies.uuid]
version = "1.16.0"
# Lets you generate random UUIDs
features = ["v4"]


[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
