[package]
name = "prompt-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
walkdir = "2.0"
colored = "2.0"
reqwest = { version = "0.11", features = ["json"] }
url = "2.0"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full", "signal"] }
uuid = { version = "1.0", features = ["v4"] }
strsim = "0.10"
chrono = { version = "0.4", features = ["serde"] }
rmcp = { version = "0.2.0", features = ["client", "transport-child-process"] }
async-process = "2.0"
dirs = "5.0"
once_cell = "1.19"
rustyline = "14.0"

[dev-dependencies]
tempfile = "3.0"
mockall = "0.12"
assert_cmd = "2.0"
predicates = "3.0"

[[bin]]
name = "cai"
path = "src/main.rs"
